ng/flux/apps/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: vaultwarden
