ng/flux/apps/vaultwarden/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - "vaultwarden.hackcorp.net"
  - "vaultwarden.yewolf.fr"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: vaultwarden
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
